kubernetes/tkgi-ui/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tkgi-ui
  labels:
    app: tkgi-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tkgi-ui
  template:
    metadata:
      labels:
        app: tkgi-ui
    spec:
      containers:
      - name: tkgi-ui
        image: vchrisb/tkgi-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
