kubernetes/tkgi-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tkgi-ui
spec:
  selector:
    app: tkgi-ui
  ports:
    - name: web
      protocol: TCP
      port: 8080
